Development Portal (2019-01-02 shi)
==============================
Update css for all themes with new sections
Minor css fixes
Add humanitarian tag in print-friendly css
Remove list numbers for location, policy markers, family tree


Development Portal (2018-12-19 shi)
==============================
Add activity-scope code list to iati_codes.js
Update css for all themes
Don't display activity-scope if empty
Don't display activity-status if empty
Don't display reporting-org if empty
Display humanitarian tag if declared in transaction


Development Portal (2018-12-18 shi)
==============================
Minor css fix for search title
Update print-friendly css
Update Dash css sticky title headers
Fix planned activities list header
Updated translations for planned list header


Development Portal (2018-09-27 shi)
==============================
Add commas to result values
Logic for region code display
Update print-friendly css for new elements
Update all themes css


Development Portal (2018-09-26 shi)
==============================
Added activity-scope, region code and region vocab to import


Development Portal (2018-09-24 shi)
==============================
Update print-friendly css of search filters section


Development Portal (2018-09-22 shi)
==============================
Fix firefox dropdown background
Add description narrative to document-link in SAVi
Update all themes, including print-friendly


Development Portal (2018-09-21 shi)
==============================
Load original css in ctrack before scripts
Sticky headers for tables
Update all themes, including print-friendly
Minor css fixes, border-box, hover text, smaller td num font


Development Portal (2018-09-12 shi)
==============================
Remove list numbers from participating-org
Update print-friendly css
Update SAVi body margin for q


Development Portal (2018-08-24 shi)
==============================
Fix alert colspan
Display humanitarian flag in SAVi
Update all themes