@@ -43,6 +43,8 @@ narrative {display:inline-block; color:inherit; font-family:inherit; word-wrap:i
 iati-activity[humanitarian="1"]:before	{content:"HUMANITARIAN"; padding:10px 40px 7px 40px; font-size:14px; color:#000; width:490px; text-align:right; background-color:#FFF; border:1px solid #000; margin-left:-1px;}
 
 transaction[humanitarian="1"]			{position:relative;}
+transaction[humanitarian="1"] transaction-date	{position:relative; min-height:85px;}
+transaction[humanitarian="1"]:nth-of-type(1) transaction-date	{position:relative; min-height:130px;}
 transaction[humanitarian="1"]:before	{position:absolute; bottom:40px; left:40px; content:"Humanitarian"; padding:5px; font-size:13px; color:#000; background-color:#FFF; border:1px solid #000; border-radius:4px;}
 
 
