@@ -35,6 +35,8 @@ narrative {display:inline-block;color:inherit;font-family:inherit;word-wrap:inhe
 iati-activity[humanitarian="1"]:before	{content:"HUMANITARIAN"; padding:10px 40px 7px 40px; font-size:14px; color:#000e20; width:490px; text-align:right; background-color:#ff890c;}
 
 transaction[humanitarian="1"]			{position:relative;}
+transaction[humanitarian="1"] transaction-date	{position:relative; min-height:85px;}
+transaction[humanitarian="1"]:nth-of-type(1) transaction-date	{position:relative; min-height:130px;}
 transaction[humanitarian="1"]:before	{position:absolute; bottom:40px; left:40px; content:"Humanitarian"; padding:5px; font-size:13px; color:#CCC; background-color:rgba(48,71,103,1); border-radius:4px;}
 
 
