@@ -1,3 +1,11 @@
+Development Portal (2019-01-03 shi)
+==============================
+Fix humanitarian tag for Chrome
+Add withdrawn codes to import
+Display withdrawn in search dropdown
+Update all css
+
+
 Development Portal (2019-01-02 shi)
 ==============================
 Update css for all themes with new sections
